1.重新调整pom的jar包，精简lib下的jar 2.添加忽略文件